[fixed] Distance effects by precision loss at large distances